Added transition on color mode change

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                 <label class="form-check-label" for="color-custom">Custom</label>
                             </div>
                         </div>
-                        <div class="custom-colors mt-3 d-none">
+                        <div class="custom-colors mt-3">
                             <h5>Sign</h5>
                             <input type="color" class="form-control form-control-color" id="color-sign" value="#f11e33">
                             <h5 class="mt-2">Background</h5>
