--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
                         </div>
                         <div class="colors-modes">
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="colors" id="color-auto" value="auto" checked>
+                                <input class="form-check-input" type="radio" name="colors" id="color-auto" value="auto" data-bs-toggle="collapse" data-bs-target=".custom-colors.show" checked>
                                 <label class="form-check-label" for="color-auto">Automatic</label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="colors" id="color-custom" value="custom">
+                                <input class="form-check-input" type="radio" name="colors" id="color-custom" value="custom" data-bs-toggle="collapse" data-bs-target=".custom-colors:not(.show)">
                                 <label class="form-check-label" for="color-custom">Custom</label>
                             </div>
                         </div>
-                        <div class="custom-colors mt-3">
-                            <h5>Sign</h5>
+                        <div class="custom-colors collapse">
+                            <h5 class="pt-3">Sign</h5>
                             <input type="color" class="form-control form-control-color" id="color-sign" value="#f11e33">
-                            <h5 class="mt-2">Background</h5>
+                            <h5 class="pt-3">Background</h5>
                             <input type="color" class="form-control form-control-color" id="color-background" value="#ffffff">
                         </div>
                     </div>
