--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="error text-danger"></div>
             </form>
-            <div class="result d-flex justify-content-center"></div>
+            <div class="result d-flex justify-content-center mb-4"></div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/air-datepicker@3.6.0/air-datepicker.min.js"></script>
