--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="d-flex justify-content-center mt-4">
                     <button type="submit" class="draw btn btn-primary">Draw</button>
                 </div>
-                <div class="error text-danger"></div>
+                <div class="messages text-danger mt-4 d-none"></div>
             </form>
             <div id="result-wrap" class="d-none justify-content-center mb-4">
                 <div id="result" class="p-4"></div>
@@ -78,6 +78,7 @@
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/air-datepicker@3.6.0/air-datepicker.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/luxon@3.7.2/build/global/luxon.min.js"></script>
         <script src="constants.js"></script>
         <script src="helpers.js"></script>
         <script src="form.js"></script>
