--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="d-flex justify-content-center mt-4">
                     <button type="submit" class="draw btn btn-primary">Draw</button>
                 </div>
-                <div class="messages text-danger mt-4 d-none"></div>
+                <div class="errors text-danger mt-4 d-none"></div>
             </form>
             <div id="result-wrap" class="d-none justify-content-center mb-4">
                 <div id="result" class="p-4"></div>
