--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <h2>Date of birth</h2>
                         <div class="form-text fw-light fst-italic mb-2">Enter your date of birth.</div>
                         <div class="calendar-wrap">
-                            <input type="text" class="form-control" name="birth_date" id="birth-date">
+                            <input type="text" class="form-control" name="birth_date" id="birth-date" placeholder="dd.MM.yyyy.">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
                                 <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
                             </svg>
