Added name to "Draw" button

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </div>
                 </div>
                 <div class="d-flex justify-content-center mt-4">
-                    <button type="submit" class="draw btn btn-primary">Draw</button>
+                    <button type="submit" class="btn btn-primary" name="draw">Draw</button>
                 </div>
                 <div class="errors text-danger mt-4 d-none"></div>
             </form>
