Removed unnecessary id's

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                         <div class="colors">
                             <button type="button" name="auto_colors" class="btn btn-outline-dark">✨ Personalize colors ✨</button>
                             <h5 class="pt-3">Sign</h5>
-                            <input type="color" class="form-control form-control-color" name="color_sign" id="color-sign" value="#f11e33">
+                            <input type="color" class="form-control form-control-color" name="color_sign" value="#f11e33">
                             <h5 class="pt-3">Background</h5>
-                            <input type="color" class="form-control form-control-color" name="color_background" id="color-background" value="#ffffff">
+                            <input type="color" class="form-control form-control-color" name="color_background" value="#ffffff">
                         </div>
                     </div>
                     <div class="form-group pt-4 pb-4">
