Removed unnecessary class

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <div>Choose colors for your lucky sign and its background.</div>
                             <div>You can as well ✨personalize✨ them to match your date of birth.</div>
                         </div>
-                        <div class="colors">
+                        <div>
                             <button type="button" name="auto_colors" class="btn btn-outline-dark">✨ Personalize colors ✨</button>
                             <h5 class="pt-3">Sign</h5>
                             <input type="color" class="form-control form-control-color" name="color_sign" value="#f11e33">
