--- a/index.html
+++ b/index.html
@@ -30,12 +30,16 @@
                             <div>Choose colors for your lucky sign and its background.</div>
                             <div>You can as well ✨personalize✨ them to match your date of birth.</div>
                         </div>
-                        <div>
-                            <button type="button" name="auto_colors" class="btn btn-outline-dark">✨ Personalize colors ✨</button>
-                            <h5 class="pt-3">Sign</h5>
-                            <input type="color" class="form-control form-control-color" name="color_sign" value="#f11e33">
-                            <h5 class="pt-3">Background</h5>
-                            <input type="color" class="form-control form-control-color" name="color_background" value="#ffffff">
+                        <button type="button" name="auto_colors" class="btn btn-outline-dark">✨ Personalize colors ✨</button>
+                        <div class="row">
+                            <div class="col-auto">
+                                <h5 class="pt-3">Sign</h5>
+                                <input type="color" class="form-control form-control-color" name="color_sign" value="#f11e33">
+                            </div>
+                            <div class="col-auto">
+                                <h5 class="pt-3">Background</h5>
+                                <input type="color" class="form-control form-control-color" name="color_background" value="#ffffff">
+                            </div>
                         </div>
                     </div>
                     <div class="form-group pt-4 pb-4">
