Colored title in seasonal gradient

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     </head>
     <body>
         <div class="container">
-            <h1 class="text-center display-1 mt-3 mb-4">Lucky sign</h1>
+            <div class="text-center mt-4 mb-4">
+                <h1 class="d-inline display-1 lh-base p-2">Lucky sign</h1>
+            </div>
             <form class="p-5 mb-4">
                 <div class="form-groups">
                     <div class="form-group pb-4">
