--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <form class="p-5 mb-4">
                 <div class="form-groups">
                     <div class="form-group pb-4">
-                        <h2>Date of birth</h2>
-                        <div class="form-text fw-light fst-italic mb-2">Enter your date of birth.</div>
+                        <h2>Birth date</h2>
+                        <div class="form-text fw-light fst-italic mb-2">Enter your birth date.</div>
                         <div class="calendar-wrap">
                             <input type="text" class="form-control" name="birth_date" placeholder="dd.MM.yyyy.">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
@@ -30,7 +30,7 @@
                         <h2>Colors</h2>
                         <div class="form-text fw-light fst-italic mb-2">
                             <div>Choose colors for your lucky sign and its background.</div>
-                            <div>You can as well ✨personalize✨ them to match your date of birth.</div>
+                            <div>You can as well ✨personalize✨ them to match your birth date.</div>
                         </div>
                         <button type="button" name="auto_colors" class="btn btn-outline-dark">✨ Personalize colors ✨</button>
                         <div class="row">
