--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
             <form class="p-5 mb-4">
                 <div class="form-groups">
                     <div class="form-group pb-4">
+                        <h2>Full name</h2>
+                        <div class="form-text fw-light fst-italic mb-2">Enter your full name.</div>
+                        <input type="text" class="form-control" name="full_name">
+                    </div>
+                    <div class="form-group pt-4 pb-4">
                         <h2>Birth date</h2>
                         <div class="form-text fw-light fst-italic mb-2">Enter your birth date.</div>
                         <div class="calendar-wrap">
@@ -29,10 +34,17 @@
                     <div class="form-group pt-4 pb-4">
                         <h2>Colors</h2>
                         <div class="form-text fw-light fst-italic mb-2">
-                            <div>Choose colors for your lucky sign and its background.</div>
-                            <div>You can as well ✨personalize✨ them to match your birth date.</div>
+                            <div>Choose colors for your lucky sign.</div>
+                            <div>You can as well personalize them in two ways:</div>
+                            <ul>
+                                <li>By your full name and birth date</li>
+                                <li>By your birth date only (seasonal)</li>
+                            </ul>
                         </div>
-                        <button type="button" name="auto_colors" class="btn btn-outline-dark">✨ Personalize colors ✨</button>
+                        <div id="auto_colors" class="d-flex flex-column align-items-start gap-2">
+                            <button type="button" name="auto_colors_name" class="btn btn-outline-dark" data-text-initial="✨ Personalize by full name and birth date ✨" data-text-selected="✔️ Personalized by full name and birth date ✔️"></button>
+                            <button type="button" name="auto_colors_date" class="btn btn-outline-dark" data-text-initial="✨ Personalize by birth date only ✨" data-text-selected="✔️ Personalized by birth date only ✔️"></button>
+                        </div>
                         <div class="row">
                             <div class="col-auto">
                                 <h5 class="pt-3">Sign</h5>
