--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <div>Choose colors for your lucky sign.</div>
                             <div>You can as well personalize them in two ways:</div>
                             <ul>
-                                <li>By your full name and birth date</li>
+                                <li>By your full name and birth date (numerological)</li>
                                 <li>By your birth date only (seasonal)</li>
                             </ul>
                         </div>
